add links to commands

--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -67,6 +67,7 @@ nav:
   - CLI reference:
     - CLI reference: cli_reference/index.md
     - aviary: cli_reference/aviary.md
+    - aviary components: cli_reference/aviary_components.md
     - aviary docs: cli_reference/aviary_docs.md
     - aviary github: cli_reference/aviary_github.md
     - aviary plugins: cli_reference/aviary_plugins.md
