--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,12 @@ dependencies = [
 
 [project.optional-dependencies]
 cli = [
+    "pyperclip>=1.9.0",
     "pyyaml>=6.0.1",
     "typer>=0.15.2",
 ]
 all = [
+    "pyperclip>=1.9.0",
     "pyyaml>=6.0.1",
     "typer>=0.15.2",
 ]
