--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -73,6 +73,7 @@ nav:
     - aviary plugins: cli_reference/aviary_plugins.md
     - aviary tile-pipeline:
         - tile-pipeline: cli_reference/aviary_tile_pipeline/tile_pipeline.md
+        - tile-pipeline config: cli_reference/aviary_tile_pipeline/tile_pipeline_config.md
         - tile-pipeline init: cli_reference/aviary_tile_pipeline/tile_pipeline_init.md
         - tile-pipeline run: cli_reference/aviary_tile_pipeline/tile_pipeline_run.md
         - tile-pipeline validate: cli_reference/aviary_tile_pipeline/tile_pipeline_validate.md
