--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -79,6 +79,7 @@ nav:
         - tile-pipeline plugins: cli_reference/aviary_tile_pipeline/tile_pipeline_plugins.md
         - tile-pipeline run: cli_reference/aviary_tile_pipeline/tile_pipeline_run.md
         - tile-pipeline validate: cli_reference/aviary_tile_pipeline/tile_pipeline_validate.md
+    - Environment variables: cli_reference/environment_variables.md
 
 theme:
   name: material
