--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -81,6 +81,10 @@ nav:
         - tile-pipeline validate: cli_reference/aviary_tile_pipeline/tile_pipeline_validate.md
     - Environment Variables: cli_reference/environment_variables.md
 
+not_in_nav: |
+  legal_notice.md
+  privacy_policy.md
+
 theme:
   name: material
   custom_dir: ../docs/overrides
