--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dynamic = [
 ]
 dependencies = [
     "geopandas>=1.0.0",
+    "loguru>=0.7.0",
     "numpy>=2.0.0",
     "pydantic>=2.9.0",
     "rasterio>=1.4.0",
