--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -30,6 +30,7 @@ nav:
       - Grid: api_reference/core/grid.md
       - Tiles: api_reference/core/tiles.md
       - Type Aliases: api_reference/core/type_aliases.md
+      - VectorLayer: api_reference/core/vector_layer.md
     - aviary.tile:
       - Model:
           - Adois: api_reference/tile/model/adois.md
