--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -67,10 +67,19 @@ nav:
             - MaskFilter: api_reference/utils/coordinates_filter/mask_filter.md
             - SetFilter: api_reference/utils/coordinates_filter/set_filter.md
     - aviary.vector:
+      - VectorExporter:
+          - VectorExporter: api_reference/vector/vector_exporter.md
       - VectorLoader:
           - VectorLoader: api_reference/vector/vector_loader/vector_loader.md
           - CompositeLoader: api_reference/vector/vector_loader/composite_loader.md
           - GPKGLoader: api_reference/vector/vector_loader/gpkg_loader.md
+      - VectorProcessor:
+          - VectorProcessor: api_reference/vector/vector_processor/vector_processor.md
+          - CopyProcessor: api_reference/vector/vector_processor/copy_processor.md
+          - ParallelCompositeProcessor: api_reference/vector/vector_processor/parallel_composite_processor.md
+          - RemoveProcessor: api_reference/vector/vector_processor/remove_processor.md
+          - SelectProcessor: api_reference/vector/vector_processor/select_processor.md
+          - SequentialCompositeProcessor: api_reference/vector/vector_processor/sequential_composite_processor.md
   - CLI Reference:
     - CLI Reference: cli_reference/index.md
     - aviary: cli_reference/aviary.md
