--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -74,12 +74,15 @@ nav:
           - GPKGLoader: api_reference/vector/vector_loader/gpkg_loader.md
       - VectorProcessor:
           - VectorProcessor: api_reference/vector/vector_processor/vector_processor.md
+          - ClipProcessor: api_reference/vector/vector_processor/clip_processor.md
           - CopyProcessor: api_reference/vector/vector_processor/copy_processor.md
+          - FillProcessor: api_reference/vector/vector_processor/fill_processor.md
           - ParallelCompositeProcessor: api_reference/vector/vector_processor/parallel_composite_processor.md
           - QueryProcessor: api_reference/vector/vector_processor/query_processor.md
           - RemoveProcessor: api_reference/vector/vector_processor/remove_processor.md
           - SelectProcessor: api_reference/vector/vector_processor/select_processor.md
           - SequentialCompositeProcessor: api_reference/vector/vector_processor/sequential_composite_processor.md
+          - SieveProcessor: api_reference/vector/vector_processor/sieve_processor.md
   - CLI Reference:
     - CLI Reference: cli_reference/index.md
     - aviary: cli_reference/aviary.md
