feat(vector): add `VectorProcessor` (#677)

--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -67,10 +67,26 @@ nav:
             - MaskFilter: api_reference/utils/coordinates_filter/mask_filter.md
             - SetFilter: api_reference/utils/coordinates_filter/set_filter.md
     - aviary.vector:
+      - VectorExporter: api_reference/vector/vector_exporter.md
       - VectorLoader:
           - VectorLoader: api_reference/vector/vector_loader/vector_loader.md
           - CompositeLoader: api_reference/vector/vector_loader/composite_loader.md
           - GPKGLoader: api_reference/vector/vector_loader/gpkg_loader.md
+      - VectorProcessor:
+          - VectorProcessor: api_reference/vector/vector_processor/vector_processor.md
+          - AggregateProcessor: api_reference/vector/vector_processor/aggregate_processor.md
+          - ClipProcessor: api_reference/vector/vector_processor/clip_processor.md
+          - CopyProcessor: api_reference/vector/vector_processor/copy_processor.md
+          - FillProcessor: api_reference/vector/vector_processor/fill_processor.md
+          - MapFieldProcessor: api_reference/vector/vector_processor/map_field_processor.md
+          - ParallelCompositeProcessor: api_reference/vector/vector_processor/parallel_composite_processor.md
+          - QueryProcessor: api_reference/vector/vector_processor/query_processor.md
+          - RemoveProcessor: api_reference/vector/vector_processor/remove_processor.md
+          - RenameFieldsProcessor: api_reference/vector/vector_processor/rename_fields_processor.md
+          - SelectProcessor: api_reference/vector/vector_processor/select_processor.md
+          - SequentialCompositeProcessor: api_reference/vector/vector_processor/sequential_composite_processor.md
+          - SieveProcessor: api_reference/vector/vector_processor/sieve_processor.md
+          - SimplifyProcessor: api_reference/vector/vector_processor/simplify_processor.md
   - CLI Reference:
     - CLI Reference: cli_reference/index.md
     - aviary: cli_reference/aviary.md
