--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -103,6 +103,14 @@ nav:
         - tile-pipeline plugins: cli_reference/aviary_tile_pipeline/tile_pipeline_plugins.md
         - tile-pipeline run: cli_reference/aviary_tile_pipeline/tile_pipeline_run.md
         - tile-pipeline validate: cli_reference/aviary_tile_pipeline/tile_pipeline_validate.md
+    - aviary vector-pipeline:
+        - vector-pipeline: cli_reference/aviary_vector_pipeline/vector_pipeline.md
+        - vector-pipeline components: cli_reference/aviary_vector_pipeline/vector_pipeline_components.md
+        - vector-pipeline config: cli_reference/aviary_vector_pipeline/vector_pipeline_config.md
+        - vector-pipeline init: cli_reference/aviary_vector_pipeline/vector_pipeline_init.md
+        - vector-pipeline plugins: cli_reference/aviary_vector_pipeline/vector_pipeline_plugins.md
+        - vector-pipeline run: cli_reference/aviary_vector_pipeline/vector_pipeline_run.md
+        - vector-pipeline validate: cli_reference/aviary_vector_pipeline/vector_pipeline_validate.md
     - Environment Variables: cli_reference/environment_variables.md
 
 not_in_nav: |
