--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -57,6 +57,7 @@ nav:
           - StandardizeProcessor: api_reference/tile/tiles_processor/standardize_processor.md
           - VectorizeProcessor: api_reference/tile/tiles_processor/vectorize_processor.md
     - aviary.pipeline:
+      - Pipeline: api_reference/pipeline/pipeline.md
       - TilePipeline: api_reference/pipeline/tile_pipeline.md
       - VectorPipeline: api_reference/pipeline/vector_pipeline.md
     - aviary.utils:
