--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -94,16 +94,16 @@ nav:
     - CLI Reference: cli_reference/index.md
     - aviary: cli_reference/aviary.md
     - aviary components: cli_reference/aviary_components.md
+    - aviary composite-pipeline:
+        - composite-pipeline: cli_reference/aviary_composite_pipeline/composite_pipeline.md
+        - composite-pipeline components: cli_reference/aviary_composite_pipeline/composite_pipeline_components.md
+        - composite-pipeline config: cli_reference/aviary_composite_pipeline/composite_pipeline_config.md
+        - composite-pipeline init: cli_reference/aviary_composite_pipeline/composite_pipeline_init.md
+        - composite-pipeline plugins: cli_reference/aviary_composite_pipeline/composite_pipeline_plugins.md
+        - composite-pipeline run: cli_reference/aviary_composite_pipeline/composite_pipeline_run.md
+        - composite-pipeline validate: cli_reference/aviary_composite_pipeline/composite_pipeline_validate.md
     - aviary docs: cli_reference/aviary_docs.md
     - aviary github: cli_reference/aviary_github.md
-    - aviary pipeline:
-        - pipeline: cli_reference/aviary_pipeline/pipeline.md
-        - pipeline components: cli_reference/aviary_pipeline/pipeline_components.md
-        - pipeline config: cli_reference/aviary_pipeline/pipeline_config.md
-        - pipeline init: cli_reference/aviary_pipeline/pipeline_init.md
-        - pipeline plugins: cli_reference/aviary_pipeline/pipeline_plugins.md
-        - pipeline run: cli_reference/aviary_pipeline/pipeline_run.md
-        - pipeline validate: cli_reference/aviary_pipeline/pipeline_validate.md
     - aviary plugins: cli_reference/aviary_plugins.md
     - aviary tile-pipeline:
         - tile-pipeline: cli_reference/aviary_tile_pipeline/tile_pipeline.md
