--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -58,6 +58,7 @@ nav:
           - VectorizeProcessor: api_reference/tile/tiles_processor/vectorize_processor.md
     - aviary.pipeline:
       - Pipeline: api_reference/pipeline/pipeline.md
+      - CompositePipeline: api_reference/pipeline/composite_pipeline.md
       - TilePipeline: api_reference/pipeline/tile_pipeline.md
       - VectorPipeline: api_reference/pipeline/vector_pipeline.md
     - aviary.utils:
@@ -93,33 +94,15 @@ nav:
     - CLI Reference: cli_reference/index.md
     - aviary: cli_reference/aviary.md
     - aviary components: cli_reference/aviary_components.md
+    - aviary config: cli_reference/aviary_config.md
     - aviary docs: cli_reference/aviary_docs.md
     - aviary github: cli_reference/aviary_github.md
     - aviary pipeline:
         - pipeline: cli_reference/aviary_pipeline/pipeline.md
-        - pipeline components: cli_reference/aviary_pipeline/pipeline_components.md
-        - pipeline config: cli_reference/aviary_pipeline/pipeline_config.md
         - pipeline init: cli_reference/aviary_pipeline/pipeline_init.md
-        - pipeline plugins: cli_reference/aviary_pipeline/pipeline_plugins.md
         - pipeline run: cli_reference/aviary_pipeline/pipeline_run.md
         - pipeline validate: cli_reference/aviary_pipeline/pipeline_validate.md
     - aviary plugins: cli_reference/aviary_plugins.md
-    - aviary tile-pipeline:
-        - tile-pipeline: cli_reference/aviary_tile_pipeline/tile_pipeline.md
-        - tile-pipeline components: cli_reference/aviary_tile_pipeline/tile_pipeline_components.md
-        - tile-pipeline config: cli_reference/aviary_tile_pipeline/tile_pipeline_config.md
-        - tile-pipeline init: cli_reference/aviary_tile_pipeline/tile_pipeline_init.md
-        - tile-pipeline plugins: cli_reference/aviary_tile_pipeline/tile_pipeline_plugins.md
-        - tile-pipeline run: cli_reference/aviary_tile_pipeline/tile_pipeline_run.md
-        - tile-pipeline validate: cli_reference/aviary_tile_pipeline/tile_pipeline_validate.md
-    - aviary vector-pipeline:
-        - vector-pipeline: cli_reference/aviary_vector_pipeline/vector_pipeline.md
-        - vector-pipeline components: cli_reference/aviary_vector_pipeline/vector_pipeline_components.md
-        - vector-pipeline config: cli_reference/aviary_vector_pipeline/vector_pipeline_config.md
-        - vector-pipeline init: cli_reference/aviary_vector_pipeline/vector_pipeline_init.md
-        - vector-pipeline plugins: cli_reference/aviary_vector_pipeline/vector_pipeline_plugins.md
-        - vector-pipeline run: cli_reference/aviary_vector_pipeline/vector_pipeline_run.md
-        - vector-pipeline validate: cli_reference/aviary_vector_pipeline/vector_pipeline_validate.md
     - Environment Variables: cli_reference/environment_variables.md
 
 not_in_nav: |
