--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,13 +52,13 @@ jobs:
         if: matrix.dependencies == 'latest'
         run: |
           uv pip install --upgrade pip setuptools wheel
-          uv pip install .[cli] -r dev/requirements/ci_requirements.txt
+          uv pip install .[all] -r dev/requirements/ci_requirements.txt
 
       - name: Install lower bounds dependencies
         if: matrix.dependencies == 'lower-bounds'
         run: |
           uv pip install --upgrade pip setuptools wheel
-          uv pip install --resolution lowest-direct .[cli] -r dev/requirements/ci_requirements.txt
+          uv pip install --resolution lowest-direct .[all] -r dev/requirements/ci_requirements.txt
 
       - name: Test with pytest
         run: |
