--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -73,6 +73,7 @@ nav:
           - VectorLoader: api_reference/vector/vector_loader/vector_loader.md
           - BoundingBoxLoader: api_reference/vector/vector_loader/bounding_box_loader.md
           - CompositeLoader: api_reference/vector/vector_loader/composite_loader.md
+          - GeoJSONLoader: api_reference/vector/vector_loader/geojson_loader.md
           - GPKGLoader: api_reference/vector/vector_loader/gpkg_loader.md
       - VectorProcessor:
           - VectorProcessor: api_reference/vector/vector_processor/vector_processor.md
