add bounding box guide

--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -11,6 +11,7 @@ nav:
     - How-to Guides: how_to_guides/index.md
     - API:
       - How to implement your own component: how_to_guides/api/how_to_implement_your_own_component.md
+      - How to use the bounding box: how_to_guides/api/how_to_use_the_bounding_box.md
     - CLI:
       - How to register your own component: how_to_guides/cli/how_to_register_your_own_component.md
     - Installation:
