--- a/dev/mkdocs.yaml
+++ b/dev/mkdocs.yaml
@@ -11,6 +11,7 @@ nav:
     - How-to Guides: how_to_guides/index.md
     - API:
       - How to implement your own component: how_to_guides/api/how_to_implement_your_own_component.md
+      - How to use the bounding box: how_to_guides/api/how_to_use_the_bounding_box.md
     - CLI:
       - How to register your own component: how_to_guides/cli/how_to_register_your_own_component.md
     - Installation:
@@ -206,7 +207,6 @@ extra:
         for repository information
       maps: |
         <a href="https://www.openstreetmap.org" target="_blank" rel="noopener noreferrer">OpenStreetMap</a>
-        and <a href="https://www.bezreg-koeln.nrw.de/geobasis-nrw" target="_blank" rel="noopener noreferrer">Geobasis NRW</a>
         for interactive maps
     actions:
       - accept
