build: support python version 3.13 (#802)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Scientific/Engineering :: GIS",
 ]
@@ -36,12 +37,12 @@ dynamic = [
 dependencies = [
     "geopandas>=1.1.0",
     "loguru>=0.7.0",
-    "numpy>=2.0.0",
+    "numpy>=2.1.0",
     "pydantic>=2.9.0",
     "rasterio>=1.4.0",
     "requests>=2.32.0",
     "rich>=13.9.0",
-    "shapely>=2.0.4",
+    "shapely>=2.0.6",
 ]
 
 [project.optional-dependencies]
